@@ -1,12 +1,12 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
- * 
- * Copyright 2007 Sun Microsystems, Inc. All rights reserved. 
- * 
+ *
+ * Copyright 2007 Sun Microsystems, Inc. All rights reserved.
+ *
  * The contents of this file are subject to the terms of the Common Development
  * and Distribution License("CDDL") (the "License").  You may not use this file
- * except in compliance with the License. 
- * 
+ * except in compliance with the License.
+ *
  * You can obtain a copy of the License at:
  *     https://jersey.dev.java.net/license.txt
  * See the License for the specific language governing permissions and
@@ -27,44 +27,70 @@ import java.util.Map;
 import java.util.Set;
 
 /**
- * Methods describing the set of resources in a Web application. It is anticipated
- * that an implementation of this interface will be generated by tools rather
- * than directly implemented by developers.
+ * The resource configuration interface for configuring a web application.
  */
 public interface ResourceConfig {
     /**
-     * URI should be normalized as specified by java.net.URI.normalize() method javadoc
+     * If true the request URI will be normalized as specified by 
+     * {@link java.net.URI#normalize}. If not true the request URI is not
+     * modified.
      */
-    public static final String NORMALIZE_URI = "com.sun.ws.rest.config.feature.NormalizeURI";
+    public static final String NORMALIZE_URI 
+            = "com.sun.ws.rest.config.feature.NormalizeURI";
     
     /**
-     * URI path should be canonicalized by removing contiguous slashes. (i.e. all /+ should be replaced by /)
+     * If true the request URI path component will be canonicalized by removing 
+     * contiguous slashes (i.e. all /+ will be replaced by /). If not true the
+     * request URI path component is mot modified.
      */
-    public static final String CANONICALIZE_URI_PATH = "com.sun.ws.rest.config.feature.CanonicalizeURIPath";
+    public static final String CANONICALIZE_URI_PATH 
+            = "com.sun.ws.rest.config.feature.CanonicalizeURIPath";
     
     /**
-     * If REDIRECT is set and either of NORMALIZE_URI and CANONICALIZE_URI_PATH is set and the appropriate operation results
-     * in different URI, the client is (temporarily) redirected to the new URI. Otherwise the request is silently forwarded
-     * to the new URI/resource
+     * If true, and either NORMALIZE_URI or CANONICALIZE_URI_PATH is true, 
+     * and the normalization and/or path canonicalization operations on the
+     * request URI result in a new URI that is not equal to the request URI,
+     * then the client is (temporarily) redirected to the new URI. Otherwise
+     * the request URI is set to be the new URI.
      */
-    public static final String REDIRECT = "com.sun.ws.rest.config.feature.Redirect";
+    public static final String REDIRECT 
+            = "com.sun.ws.rest.config.feature.Redirect";
     
     /**
-     * Matric params (/in/uri/like/this/par1=a;par2=b) should be ignored
+     * If true matrix parameters (if present) in the request URI path component
+     * will be ignored when matching the path to URI templates declared by
+     * resource classes.
      */
-    public static final String IGNORE_MATRIX_PARAMS = "com.sun.ws.rest.config.feature.IgnoreMatrixParams";
-   
- 
+    public static final String IGNORE_MATRIX_PARAMS 
+            = "com.sun.ws.rest.config.feature.IgnoreMatrixParams";
+    
     /**
-     * Get the set of resource classes that should be deployed. A resource class
-     * is a class with a <code>UriTemplate</code> annotation.
-     * @return the set of resource classes.
+     * Get the set of root resource classes to be deployed by the Web
+     * application.
+     * <p>
+     * A root resource class is a Java class with a {@link javax.ws.rs.UriTemplate} 
+     * annotation declared on the class.
+     * 
+     * @return the set of root resource classes. 
+     *         The returned value shall never be null.
      */
     Set<Class> getResourceClasses();
     
     /**
-     * Get the unmodifiable map containing set of features associated with the WebApplication 
-     * @return the unmodifiable map of features.
+     * Get the map of features associated with the Web application.
+     *
+     * @return the features.
+     *         The returned value shall never be null.
      */
     Map<String, Boolean> getFeatures();
+    
+    /**
+     * Get the value of a feature.
+     *
+     * @param featureName the feature name.
+     * @return true if the feature is present and set to true, otherwise false
+     *         if the feature is present and set to false or the feature is not 
+     *         present.
+     */
+    boolean getFeature(String featureName);
 }
