@@ -1,4 +1,9 @@
 release 0.3 (2007-10-xx)
+- ResourceConfig interface is modified to support a feature bag with
+  documented standard features.
+  DefaultResourceConfig is mutable implementation of ResourceConfig.
+  The APT tool generates ResourceConfig classes that inherit from 
+  DefaultResourceConfig.
 - Created SPI container helper classes AbstractContainerRequest and
   AbstractContainerResponse.
   This makes it easier for developers to write and maintain their own
